# Webassembly

./: INSTALAR EMSCRIPTEN.MD  git-repo.txt
@BuildChuckNorris/: CMakeLists.txt  readme.md
@BuildChuckNorris/src/: ChuckNorris.cpp
@BuildChuckNorris2/: CMakeLists copy.txt  CMakeLists.txt
@BuildChuckNorris2-Conan/: CMakeLists.txt  conanfile.txt  historico.txt
@BuildChuckNorris2-Conan/src/: ChuckNorris.cpp
@BuildChuckNorris2/include/: ChuckNorris.hpp
C++Tutorial/: a.out  array1  array1.cpp  array2  array2.cpp  hello.cpp  math  random  readme.md  types  types.cpp  variable_declaration
C++Tutorial/functions/: call_by_pointer  call_by_pointer.cpp  call_by_reference  call_by_reference.cpp  call_by_value  call_by_value.cpp  default_values  default_values.cpp  func  func.cpp
ExemploBind/: README.MD  a.out.js  a.out.wasm  bind.html  classes.html  classes.js  classes.wasm  process_message.html  process_message.js  process_message.wasm
ExemploC++/: big-file  big-file.cpp  inp.txt  test.txt  tokenize  tokenize.cpp
ExemploC++/ChuckNorris/: .gitignore  CMakeLists.txt  cpp_demo  readme.md
ExemploC++/ChuckNorris/include/: ChuckNorris.hpp
ExemploC++/ChuckNorris/src/: main.cpp
ExemploFibonacci/: a.out.js
ExemploNode/: file1.md  file2.md  file3.md  index copy 2.js  index copy 3.js  index copy 4.js  index copy 5.js  index copy 6.js  index copy.js  index-1.js  index.js  package-lock.json  package.json
ExemploNode/app/: calc.js
ExemploNode/src/: a.out.js  a.out.wasm  fib.c  fib.wasm
ExemploReact/: .gitignore  README.md  build-wasm.sh  package-lock.json  package.json
ExemploReact/external-teste/: process_message.js
ExemploReact/public/: README.MD  fib.js  index.html
ExemploReact/src/: App.js  index.js
ExemploReact/src/util/: functions.js  worker.js  workerFunctions.js
ExemploReact/src/wasm/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.MD  add.js  add.js.old  add.wasm  app_wasm.js  build-wasm.sh  build.ninja  build.sh  cmake_install.cmake  example.cpp  example.js  example.js.old  example.wasm  fib.js  fib.wasm  package.json  process_message.js  processmessage copy.js  processmessage-ok.js  processmessage.js  processmessage.js.old  processmessage.wasm  rules.ninja  webp.cpp  webp.js  webp.js.old
ExemploWebP/: README.MD  a.out.js  a.out.wasm  webp-video.html  webp.c  webp.html
ExemploWebPNinja/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  README.MD  build-wasm.sh  build.ninja  cmake_install.cmake  rules.ninja  webp.c  webp.html
ExemploWithNpm/: .gitignore  README.MD  build.sh  exemplo.html  my-module.js  my-module.wasm  package-lock.json  package.json
ExemploWithNpm/build-vpx/: args.c.d  config.mk  docs-generic-gnu.mk  ivfdec.c.d  ivfenc.c.d  md5_utils.c.d  rate_hist.c.d  test_intra_pred_speed  tools_common.c.d  video_reader.c.d  video_writer.c.d  vpx.pc  vpx_config.c  vpx_config.c.d  vpx_config.h  vpxdec.c.d  vpxenc.c.d  vpxstats.c.d  warnings.c.d  webmdec.cc.d  webmenc.cc.d  y4menc.c.d  y4minput.c.d
ExemploWithNpm/build-vpx/examples/: decode_to_md5  decode_to_md5.c.d  decode_with_drops  decode_with_drops.c.d  postproc  postproc.c.d  resize_util  resize_util.c.d  set_maps  set_maps.c.d  simple_decoder  simple_decoder.c.d  simple_encoder  simple_encoder.c.d  svc_encodeframe.c.d  twopass_encoder  twopass_encoder.c.d  vp8cx_set_ref  vp8cx_set_ref.c.d  vp9_lossless_encoder  vp9_lossless_encoder.c.d  vp9_spatial_svc_encoder  vp9_spatial_svc_encoder.c.d  vp9cx_set_ref  vp9cx_set_ref.c.d  vpx_temporal_svc_encoder  vpx_temporal_svc_encoder.c.d
ExemploWithNpm/build-vpx/test/: active_map_refresh_test.cc.d  active_map_test.cc.d  alt_ref_aq_segment_test.cc.d  altref_test.cc.d  aq_segment_test.cc.d  avg_test.cc.d  bench.cc.d  borders_test.cc.d  byte_alignment_test.cc.d  comp_avg_pred_test.cc.d  config_test.cc.d  convolve_test.cc.d  cpu_speed_test.cc.d  cq_test.cc.d  dct16x16_test.cc.d  dct32x32_test.cc.d  dct_partial_test.cc.d  dct_test.cc.d  decode_api_test.cc.d  decode_corrupted.cc.d  decode_svc_test.cc.d  decode_test_driver.cc.d  encode_api_test.cc.d  encode_test_driver.cc.d  error_resilience_test.cc.d  external_frame_buffer_test.cc.d  fdct8x8_test.cc.d  frame_size_tests.cc.d  hadamard_test.cc.d  idct8x8_test.cc.d  idct_test.cc.d  invalid_file_test.cc.d  keyframe_test.cc.d  level_test.cc.d  lpf_test.cc.d  minmax_test.cc.d  partial_idct_test.cc.d  predict_test.cc.d  quantize_test.cc.d  realtime_test.cc.d  (+40 more)
ExemploWithNpm/build-vpx/tools/: tiny_ssim  tiny_ssim.c.d
ExemploWithNpm/build-vpx/vp8/: vp8_cx_iface.c.d  vp8_dx_iface.c.d
ExemploWithNpm/build-vpx/vp8/common/: alloccommon.c.d  blockd.c.d  dequantize.c.d  entropy.c.d  entropymode.c.d  entropymv.c.d  extend.c.d  filter.c.d  findnearmv.c.d  idct_blk.c.d  idctllm.c.d  loopfilter_filters.c.d  mbpitch.c.d  modecont.c.d  quant_common.c.d  reconinter.c.d  reconintra.c.d  reconintra4x4.c.d  rtcd.c.d  setupintrarecon.c.d  swapyv12buffer.c.d  treecoder.c.d  vp8_loopfilter.c.d  vp8_skin_detection.c.d
ExemploWithNpm/build-vpx/vp8/decoder/: dboolhuff.c.d  decodeframe.c.d  decodemv.c.d  detokenize.c.d  onyxd_if.c.d  threading.c.d
ExemploWithNpm/build-vpx/vp8/encoder/: bitstream.c.d  boolhuff.c.d  copy_c.c.d  dct.c.d  denoising.c.d  encodeframe.c.d  encodeintra.c.d  encodemb.c.d  encodemv.c.d  ethreading.c.d  firstpass.c.d  lookahead.c.d  mcomp.c.d  modecosts.c.d  (+10 more)
ExemploWithNpm/build-vpx/vp9/: vp9_cx_iface.c.d  vp9_dx_iface.c.d
ExemploWithNpm/build-vpx/vpx_dsp/: avg.c.d  bitreader.c.d  bitreader_buffer.c.d  bitwriter.c.d  bitwriter_buffer.c.d  fwd_txfm.c.d  intrapred.c.d  inv_txfm.c.d  loopfilter.c.d  prob.c.d  psnr.c.d  quantize.c.d  sad.c.d  skin_detection.c.d  subtract.c.d  sum_squares.c.d  variance.c.d  vpx_convolve.c.d  vpx_dsp_rtcd.c.d
ExemploWithNpm/build-vpx/vpx_mem/: vpx_mem.c.d
ExemploWithNpm/build-vpx/vpx_scale/: vpx_scale_rtcd.c.d
ExemploWithNpm/build-vpx/vpx_util/: vpx_thread.c.d  vpx_write_yuv_frame.c.d
ExemploWithNpm/src/: my-module.cpp
LetsStartWithCMake/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  rules.ninja
(+73 files in other folders)
